examples/negative/effects_phase2/extern_handler_outside_default.kai
# Issue #556 (Stage A): `$extern_handler("c_sym")` is a compiler
# intrinsic that may only appear inside a `default { }` clause body —
# anywhere else the typer rejects it. This fixture exercises the
# rejection path: a bare `$extern_handler(...)` at expression
# position (here as the body of a top-level fn) must produce a
# diagnostic, not silently typecheck.

fn main() : Int = $extern_handler("kai_foo")
